	* changed the interface to session::add_torrent for soem speed optimizations.
	* greatly improved the command line control of the example client_test.
	* fixed bug where upload rate limit was not being applied.
	* files that are being checked will no longer stall files that don't need
	  checking.
	* changed the way libtorrent identifies support for its excentions
	  to look for 'ext' at the end of the peer-id.
	* improved performance by adding a circle buffer for the send buffer.
	* fixed bugs in the http tracker connection when using an http proxy.
	* fixed problem with storage's file pool when creating torrents and then
	  starting to seed them.
	* hard limit on remote request queue and timeout on requests (a timeout
	  triggers rerequests). This makes libtorrent work much better with
	  "broken" clients like BitComet which may ignore requests.

Initial release 0.9

	* multitracker support
	* serves multiple torrents on a single port and a single thread
	* supports http proxies and proxy authentication
	* gzipped tracker-responses
	* block level piece picker
	* queues torrents for file check, instead of checking all of them in parallel
	* uses separate threads for checking files and for main downloader
	* upload and download rate limits
	* piece-wise, unordered, incremental file allocation
	* fast resume support
	* supports files > 2 gigabytes
	* supports the no_peer_id=1 extension
	* support for udp-tracker protocol
	* number of connections limit
	* delays sending have messages
	* can resume pieces downloaded in any order
	* adjusts the length of the request queue depending on download rate
	* supports compact=1
	* selective downloading
	* ip filter
