@@ -223,6 +223,21 @@ namespace libtorrent
 		torrent_handle handle;
 	};
 
+	struct metadata_failed_alert: alert
+	{
+		metadata_failed_alert(
+			const torrent_handle& h
+			, const std::string& msg)
+			: alert(alert::info, msg)
+			, handle(h)
+		{}
+
+		virtual std::auto_ptr<alert> clone() const
+		{ return std::auto_ptr<alert>(new metadata_failed_alert(*this)); }
+
+		torrent_handle handle;
+	};
+	
 	struct metadata_received_alert: alert
 	{
 		metadata_received_alert(
