@@ -1006,6 +1006,7 @@ namespace libtorrent { namespace detail
 		for (connection_map::iterator i = m_connections.begin();
 			i != m_connections.end(); ++i)
 		{
+			assert(i->second);
 			if (i->second->can_write() != m_selector.is_writability_monitored(i->first)
 				|| i->second->can_read() != m_selector.is_readability_monitored(i->first))
 			{
